<resources>
    <string name="app_name">HorseIMU Szerver</string>
    <string name="action_settings">Beállítások</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Mérés Indítás</string>
    <string name="next">Következő</string>
    <string name="previous">Előző</string>
    <string name="measurement_name">Mérés neve</string>
    <string name="measurement_duration">Időtartam (perc)</string>
    <string name="measurement_frequency">Mérés gyakorisága (Hz)</string>
    <string name="measurement_frequency_50hz">50Hz</string>
    <string name="measurement_frequency_100hz">100Hz</string>
    <string name="measurement_start">Indítás</string>
    <string name="measurement_testled">Teszt LED</string>
    <string name="dark_mode">Sötét Téma</string>
    <string name="message_list">Üzenetek</string>
    <string name="waiting">Várakozás...</string>
    <string name="status">Státusz:</string>
    <string name="minutes">perc</string>
    <string name="hertz" translatable="false">Hz</string>
    <string name="teszt_led">Teszt LED</string>
    <string name="kliens_csatlakozva">kliens csatlakozva</string>
    <string name="_0">0</string>
</resources>